syntax = "proto3";  // Specify the proto version

// Message representing player information
message player_info {
    string kii_job_id = 1;       // Job ID associated with the player
    int32 player_number = 2;     // Unique player number
}

// Message representing MAC shares
message secret_share {
    string mackeyshare_2 = 1;    // MAC key share 2
    string mackeyshare_p = 2;     // MAC key share P
    string seeds = 3;             // Seeds used for the shares
}
